# leads-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prompt_config.example.json  pyproject.toml  slack-app-manifest.yml
deploy/: Caddyfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md
src/leads_agent/: __init__.py  agent.py  api.py  app.py  backtest.py  cli.py  config.py  llm.py  models.py  processor.py  prompts.py  slack.py
src/leads_agent/common/: __init__.py  mask.py
src/leads_agent/core/: __init__.py  backtest.py  classify.py  history.py  init_wizard.py  processor.py  replay.py
src/leads_agent/prompts/: __init__.py  manager.py  prompts.py  utils.py
