[project]
name = "leads-agent"
version = "0.1.0"
description = "Slack leads classifier using Socket Mode + local/OpenAI-compatible LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Francisco González" }]

dependencies = [
  "slack-bolt>=1.18",
  "slack_sdk>=3.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "pydantic-ai-slim[openai,duckduckgo]>=0.0.12",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "logfire>=4.19.0",
  "ruff>=0.14.14",
]

[project.scripts]
leads-agent = "leads_agent.cli:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leads_agent"]

